project(project-euler C CXX)
cmake_minimum_required(VERSION 2.8)

add_executable(pr0001 pr0001.c)
add_executable(pr0002 pr0002.c)
add_executable(pr0004 pr0004.c)
add_executable(pr0009 pr0009.c)
add_executable(pr0031 pr0031.c)
add_executable(pr0041 pr0041.cc)
add_executable(pr0042 pr0042.c)
add_executable(pr0048 pr0048.c)
add_executable(pr0049 pr0049.c)
add_executable(pr0119 pr0119.c)

target_link_libraries(pr0042 m)
target_link_libraries(pr0049 m)
target_link_libraries(pr0119 m)
